# xcache

./: .cirrus.yml  .hgignore  CMakeLists.txt  README.md  README.rst
common/: proccall.h
libxcache/: CMakeLists.txt
libxcache-spy/: CMakeLists.txt  README.rst
libxcache-spy/src/: call.c  call.h  init.c
libxcache/include/xcache/: cmd.h  db.h  db_t.h  debug.h  filem.h  hash.h  proc.h  record.h  trace.h  version.h  xcache.h
libxcache/src/: action_eq.c  action_free.c  action_free_all.c  action_is_valid.c  action_new_access.c  action_new_read.c  action_new_stat.c  action_t.h  argv_serialise.c  argv_serialise.h  atfd_to_str.c  cbor.h  cbor_read_opt_str.c  cbor_read_str.c  cbor_read_u64.c  cbor_read_u64_raw.c  cbor_write_opt_str.c  cbor_write_str.c  cbor_write_u64.c  cbor_write_u64_raw.c  channel.h  channel_close.c  channel_open.c  channel_read.c  channel_write.c  cmd_load.c  cmd_read.c  cmd_save.c  cmd_t.h  cmd_write.c  copy_file.c  copy_file.h  cp.c  cp.h  db.h  db_close.c  db_load.c  db_make_file.c  db_open.c  db_save.c  (+178 more)
src/: CMakeLists.txt  Makefile  abspath.c  cache.c  cache.h  comm-protocol.c  comm-protocol.h  config.in.h  constants.h  db.c  db.h  debug.c  debug.h  depset.c  depset.h  dict.c  dict.h  environ.c  environ.h  file.c  file.h  filehash.c  filehash.h  fingerprint.c  fingerprint.h  getenv.c  hash.c  hook-getenv.c  hook.c  hook.h  log.c  log.h  macros.h  main.c  message-protocol.c  message-protocol.h  operation.c  operation.h  oversee.c  ptrace-wrapper.c  (+18 more)
src/arch/x86/: arch_syscall.h
src/arch/x86_64/: arch_syscall.h
src/collection/: dict.c  dict.h  list.c  list.h  set.c  set.h
src/sql/: addinput.sql  addoperation.sql  addoutput.sql  create.sql  deleteinput.sql  deleteoperation.sql  deleteoutput.sql  getid.sql  getinputs.sql  getoutputs.sql  to_c.sh  truncate.sql
src/util/: abspath.c  aprintf.c  cp.c  du.c  file.c  file.h  filehash.c  fileiter.c  get.c  hash.c  mkdirp.c  ralloc.c  readlink.c  reduce.c  resolve.c
test/: CMakeLists.txt  forker.c  my-echo.c  nop.c  print-stderr.c  print-stdout.c  test.py  uncacheable.c  write-file.c
tests/: CMakeLists.txt  basic-echo.sh  env-replicated.sh  fork-test.py  gcc-basic.sh  ghc-basic.sh  integration-cache-echo.sh  make-basic.sh  my-cat.c  my-echo.c  regression-reduce-other-files.sh  run-all.py  run-tests.py  socket-then-print.c  tests.py  valgrind-gcc.sh
tools/: Makefile.strace  generate-translation.sh  strace.c
xcache/: CMakeLists.txt
xcache/doc/: xcache.1
xcache/src/: alloc.h  debug.h  help.c  help.h  main.c  xasprintf.c  xcache.1  xstrdup.c
xxxcache/: Artefact.py  Cache.py  File.py  README.md  String.py  __init__.py  cache.py  cp  digest.py  key.py  util.py
